lib/tests/fixtures/compiler/evaluation/invalid_variant_type_alias.baseline
Error: invalid_variant_type_alias.pp:1:16: node 'test': Variant[Invalid] does not resolve to a real type.
  type Invalid = Variant[Invalid, Invalid, Invalid]
                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  backtrace:
    in '<type alias Invalid>' at invalid_variant_type_alias.pp:1
    in '<class main>' at invalid_variant_type_alias.pp:2
