lib/tests/fixtures/compiler/evaluation/invalid_variant_type_alias.pp
type Invalid = Variant[Invalid, Invalid, Invalid]
notice(0 =~ Invalid)
